--- a/index.css
+++ b/index.css
@@ -5,10 +5,6 @@
   --f-bold: bold;
 }
 
-body {
-  background-color: var(--blue);
-}
-
 .container {
   display: flex;
   flex-direction: column;
@@ -19,7 +15,7 @@ body {
   flex-direction: column;
   position: relative;
   border: 1px solid #000000;
-  background-color: gray;
+  /* background-color: gray; */
 }
 .kalender {
   width: 100%;
@@ -100,14 +96,11 @@ body {
   border: 1px solid #000000;
 }
 
-
-
 /* HEADER */
 .logo {
   display: flex;
   max-width: 200px;
   align-items: center;
-  
 }
 
 .logotext {
@@ -116,8 +109,6 @@ body {
   border: #000000 15px solid;
   box-sizing: border-box;
   max-height: 255px;
-
-  
 }
 
 .logolopp {
