--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+
 .container {
   display: flex;
   flex-direction: column;
@@ -24,32 +25,53 @@
 
 
 
-/* HEADER */
+/* HEADER for MOBILE 375px wide*/
+.headerlogo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .logo {
   display: flex;
-  max-width: 200px;
-  align-items: center;
+  max-width: 375px;
+  justify-content: center;
   
 }
 
 .logotext {
   display: flex;
   flex-direction: column;
-  border: #000000 15px solid;
+  align-items: center;
+  background-color: #c4d5ed;
+  border: #000000 8px solid;
+  border-radius: 5px;
   box-sizing: border-box;
-  max-height: 255px;
-
-  
-}
-
-.logolopp {
-  font-size: 10rem;
-  font-weight: 700;
-  margin: 0;
-  max-height: 50px;
+  width: 250px;
+  height: 90px;
 }
 
 .logochris {
-  font-size: 5rem;
-  margin: 0;
+  font-size: 24px;
+  letter-spacing: 8px;
+}
+
+.logolopp h1 {
+  font-size: 52px;
+  font-weight: 1000;
+  letter-spacing: 4px;
+  line-height: 0.7;
+  margin: 5px 0px 0px 0px;
+  padding: 0;
+}
+
+.logoimg {
+  display: flex;
+  justify-content: center;
+  width: 90px;
+  height: 90px;
+  border: #000000 8px solid;
+  border-radius: 5px;
+  margin-right: 10px;
+  background-color: #c4d5ed;
 }
