--- a/index.css
+++ b/index.css
@@ -102,53 +102,51 @@ body {
 
 /* HEADER for MOBILE 375px wide*/
 .headerlogo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-}
-
-.logotext {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #c4d5ed;
-  border: #000000 8px solid;
-  border-radius: 5px;
-  box-sizing: border-box;
-  max-height: 255px;
-
-  
-}
-
-.logolopp {
-  font-size: 10rem;
-  font-weight: 700;
-  margin: 0;
-  max-height: 50px;
-}
-
-.logochris {
-  font-size: 24px;
-  letter-spacing: 8px;
-}
-
-.logolopp h1 {
-  font-size: 52px;
-  font-weight: 1000;
-  letter-spacing: 4px;
-  line-height: 0.7;
-  margin: 5px 0px 0px 0px;
-  padding: 0;
-}
-
-.logoimg {
-  display: flex;
-  justify-content: center;
-  width: 90px;
-  height: 90px;
-  border: #000000 8px solid;
-  border-radius: 5px;
-  margin-right: 10px;
-  background-color: #c4d5ed;
-}
+ 
+ 
+  .logo {
+    display: flex;
+    max-width: 375px;
+    justify-content: center;
+   
+  }
+   
+  .logotext {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #c4d5ed;
+    border: #000000 8px solid;
+    border-radius: 5px;
+    box-sizing: border-box;
+    width: 250px;
+    height: 90px;
+  }
+   
+  .logochris {
+    font-size: 24px;
+    letter-spacing: 8px;
+   
+    max-height: 255px;
+   
+  }
+   
+  .logolopp h1 {
+    font-size: 52px;
+    font-weight: 1000;
+    letter-spacing: 4px;
+    line-height: 0.7;
+    margin: 5px 0px 0px 0px;
+    padding: 0;
+  }
+   
+  .logoimg {
+    display: flex;
+    justify-content: center;
+    width: 90px;
+    height: 90px;
+    border: #000000 8px solid;
+    border-radius: 5px;
+    margin-right: 10px;
+    background-color: #c4d5ed;
+  }
