--- a/index.css
+++ b/index.css
@@ -190,3 +190,26 @@ body {
     background-color: #c4d5ed;
   }
 
+.footer {
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  bottom: 10px;
+  gap: 40px;
+  justify-content: center;
+  align-items: center;
+  border-top: #000000 solid 1px;
+  padding: 10px;
+}
+
+.socialmedia i {
+  font-size: 24px;
+  margin: 0px 8px 0px 8px;
+}
+
+.footerlinks a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 12px;
+  margin-left: 10px;
+}
