--- a/index.scss
+++ b/index.scss
@@ -1,24 +1,24 @@
-@mixin theme($theme: rgb(184, 45, 45)) {
-  background: $theme;
-  color: red;
-}
+// @mixin theme($theme: rgb(184, 45, 45)) {
+//   background: $theme;
+//   color: red;
+// }
 
-.kalender {
-  @include theme;
-  color: red;
-}
-.genre {
-  @include theme($theme: DarkGreen);
-}
-.billeder {
-  @include theme($theme: DarkGreen);
-}
-.info {
-  @include theme($theme: DarkGreen);
-}
-.kontakt {
-  @include theme($theme: DarkGreen);
-}
-.sog {
-  @include theme($theme: DarkGreen);
-}
+// .kalender {
+//   @include theme;
+//   color: red;
+// }
+// .genre {
+//   @include theme($theme: DarkGreen);
+// }
+// .billeder {
+//   @include theme($theme: DarkGreen);
+// }
+// .info {
+//   @include theme($theme: DarkGreen);
+// }
+// .kontakt {
+//   @include theme($theme: DarkGreen);
+// }
+// .sog {
+//   @include theme($theme: DarkGreen);
+// }
