--- a/index.css
+++ b/index.css
@@ -151,9 +151,23 @@ h3 {
   font-weight: var(--f-bold);
   /* position: absolute; */
   background-color: var(--blue);
-  margin: 30px;
   padding: 10px;
-  margin: 30px;
+  margin: 5px;
+  border: 8px solid #000000;
+  border-radius: 5px;
+  box-sizing: border-box;
+  align-items: center;
+}
+.section1 {
+  display: flex;
+  flex-direction: row;
+  max-width: 375px;
+  font-family: var(--font);
+  font-weight: var(--f-bold);
+  /* position: absolute; */
+  background-color: var(--blue);
+  padding: 10px;
+  margin: 5px;
   border: 8px solid #000000;
   border-radius: 5px;
   box-sizing: border-box;
