--- a/index.css
+++ b/index.css
@@ -184,7 +184,7 @@ h3 {
 
 .logo {
   display: flex;
-  max-width: 375px;
+  width: 100%;
   justify-content: center;
 }
 
@@ -196,15 +196,13 @@ h3 {
   border: #000000 8px solid;
   border-radius: 5px;
   box-sizing: border-box;
-  width: 250px;
+  width: 100%;
   height: 90px;
 }
 
 .logochris {
   font-size: 24px;
   letter-spacing: 8px;
-
-  max-height: 255px;
 }
 
 .logolopp h1 {
@@ -227,30 +225,6 @@ h3 {
   background-color: #c4d5ed;
 }
 
-.logo {
-  display: flex;
-  max-width: 375px;
-  justify-content: center;
-}
-
-.logotext {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #c4d5ed;
-  border: #000000 8px solid;
-  border-radius: 5px;
-  box-sizing: border-box;
-  width: 250px;
-  height: 90px;
-}
-
-.logochris {
-  font-size: 24px;
-  letter-spacing: 8px;
-  max-height: 255px;
-}
-
 .logolopp h1 {
   font-size: 52px;
   font-weight: 1000;
@@ -260,31 +234,20 @@ h3 {
   padding: 0;
 }
 
-.logoimg {
-  display: flex;
-  justify-content: center;
-  width: 90px;
-  height: 90px;
-  border: #000000 8px solid;
-  border-radius: 5px;
-  margin-right: 10px;
-  background-color: #c4d5ed;
-}
 
 .footer {
   display: flex;
   flex-direction: row;
-  position: fixed;
-  bottom: 10px;
   gap: 40px;
   justify-content: center;
   align-items: center;
   border-top: #000000 solid 1px;
   padding: 10px;
+  margin-top: 10px;
 }
 
 .socialmedia i {
-  font-size: 24px;
+  font-size: 22px;
   margin: 0px 8px 0px 8px;
 }
 
@@ -294,3 +257,4 @@ h3 {
   font-size: 12px;
   margin-left: 10px;
 }
+
