--- a/index.css
+++ b/index.css
@@ -145,6 +145,20 @@ h3 {
   /* border: 1px solid #000000; */
 }
 
+.menu_inside {
+  /* width: 100%;
+  height: 100%; */
+  color: black;
+  font-size: 24px;
+  font-family: var(--font);
+  font-weight: var(--f-bold);
+  /* line-height: 28.8px; */
+  /* word-wrap: break-word; */
+
+  padding: 10px;
+  /* border: 1px solid #000000; */
+}
+
 .section {
   display: flex;
   flex-direction: row;
