--- a/index.css
+++ b/index.css
@@ -197,6 +197,11 @@ h3 {
   width: 50%;
   padding-left: 60px;
 }
+.info_container {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+}
 
 .logo {
   display: flex;
@@ -250,7 +255,6 @@ h3 {
   padding: 0;
 }
 
-
 .footer {
   display: flex;
   flex-direction: row;
@@ -273,4 +277,3 @@ h3 {
   font-size: 12px;
   margin-left: 10px;
 }
-
