--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,8 @@
+@import "footer";
+@import "header";
+@import "navbar";
+@import "section";
+
 // @mixin theme($theme: rgb(184, 45, 45)) {
 //   background: $theme;
 //   color: red;
