new bckp copies

--- a/index copy.css
+++ b/index copy.css
@@ -54,19 +54,21 @@ h3 {
 } */
 
 .nav {
-  display: flex;
-  max-width: 375px;
-  justify-content: center;
-  flex-direction: column;
+  /* position: relative; */
+  /* max-width: 375px; */
+  width: 80%;
+  justify-content: space-around;
+
   /* position: absolute; */
-  border: 1px solid #000000;
+  border: 2px solid #000000;
   background-color: var(--blue);
   margin: 30px;
+  padding: 30px;
   box-sizing: border-box;
 }
 .kalender {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   color: black;
   font-size: 24px;
   font-family: var(--font);
@@ -75,11 +77,11 @@ h3 {
   word-wrap: break-word;
 
   padding: 10px;
-  border: 1px solid #000000;
+  /* border: 1px solid #000000; */
 }
 .genre {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   color: black;
   font-size: 24px;
   font-family: var(--font);
@@ -88,11 +90,11 @@ h3 {
   word-wrap: break-word;
 
   padding: 10px;
-  border: 1px solid #000000;
+  /* border: 1px solid #000000; */
 }
 .billeder {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   color: black;
   font-size: 24px;
   font-family: var(--font);
@@ -101,11 +103,11 @@ h3 {
   word-wrap: break-word;
 
   padding: 10px;
-  border: 1px solid #000000;
+  /* border: 1px solid #000000; */
 }
 .info {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   color: black;
   font-size: 24px;
   font-family: var(--font);
@@ -114,11 +116,11 @@ h3 {
   word-wrap: break-word;
 
   padding: 10px;
-  border: 1px solid #000000;
+  /* border: 1px solid #000000; */
 }
 .kontakt {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   color: black;
   font-size: 24px;
   font-family: var(--font);
@@ -127,11 +129,11 @@ h3 {
   /* word-wrap: break-word; */
 
   padding: 10px;
-  border: 1px solid #000000;
+  /* border: 1px solid #000000; */
 }
 .sog {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   color: black;
   font-size: 24px;
   font-family: var(--font);
@@ -140,7 +142,21 @@ h3 {
   /* word-wrap: break-word; */
 
   padding: 10px;
-  border: 1px solid #000000;
+  /* border: 1px solid #000000; */
+}
+
+.menu_inside {
+  /* width: 100%;
+  height: 100%; */
+  color: black;
+  font-size: 24px;
+  font-family: var(--font);
+  font-weight: var(--f-bold);
+  /* line-height: 28.8px; */
+  /* word-wrap: break-word; */
+
+  padding: 10px;
+  /* border: 1px solid #000000; */
 }
 
 .section {
@@ -151,9 +167,23 @@ h3 {
   font-weight: var(--f-bold);
   /* position: absolute; */
   background-color: var(--blue);
-  margin: 30px;
   padding: 10px;
-  margin: 30px;
+  margin: 5px;
+  border: 8px solid #000000;
+  border-radius: 5px;
+  box-sizing: border-box;
+  align-items: center;
+}
+.section1 {
+  display: flex;
+  flex-direction: row;
+  max-width: 375px;
+  font-family: var(--font);
+  font-weight: var(--f-bold);
+  /* position: absolute; */
+  background-color: var(--blue);
+  padding: 10px;
+  margin: 5px;
   border: 8px solid #000000;
   border-radius: 5px;
   box-sizing: border-box;
@@ -170,7 +200,7 @@ h3 {
 
 .logo {
   display: flex;
-  max-width: 375px;
+  width: 100%;
   justify-content: center;
 }
 
@@ -182,15 +212,13 @@ h3 {
   border: #000000 8px solid;
   border-radius: 5px;
   box-sizing: border-box;
-  width: 250px;
+  width: 100%;
   height: 90px;
 }
 
 .logochris {
   font-size: 24px;
   letter-spacing: 8px;
-
-  max-height: 255px;
 }
 
 .logolopp h1 {
@@ -213,30 +241,6 @@ h3 {
   background-color: #c4d5ed;
 }
 
-.logo {
-  display: flex;
-  max-width: 375px;
-  justify-content: center;
-}
-
-.logotext {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #c4d5ed;
-  border: #000000 8px solid;
-  border-radius: 5px;
-  box-sizing: border-box;
-  width: 250px;
-  height: 90px;
-}
-
-.logochris {
-  font-size: 24px;
-  letter-spacing: 8px;
-  max-height: 255px;
-}
-
 .logolopp h1 {
   font-size: 52px;
   font-weight: 1000;
@@ -246,31 +250,20 @@ h3 {
   padding: 0;
 }
 
-.logoimg {
-  display: flex;
-  justify-content: center;
-  width: 90px;
-  height: 90px;
-  border: #000000 8px solid;
-  border-radius: 5px;
-  margin-right: 10px;
-  background-color: #c4d5ed;
-}
 
 .footer {
   display: flex;
   flex-direction: row;
-  position: fixed;
-  bottom: 10px;
   gap: 40px;
   justify-content: center;
   align-items: center;
   border-top: #000000 solid 1px;
   padding: 10px;
+  margin-top: 10px;
 }
 
 .socialmedia i {
-  font-size: 24px;
+  font-size: 22px;
   margin: 0px 8px 0px 8px;
 }
 
@@ -280,3 +273,4 @@ h3 {
   font-size: 12px;
   margin-left: 10px;
 }
+
