--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@ h3 {
 }
 
 .menu {
+  cursor: pointer;
   display: flex;
   max-width: 375px;
   justify-content: center;
@@ -44,6 +45,10 @@ h3 {
   border-radius: 5px;
   box-sizing: border-box;
 }
+.active,
+.collapsible:hover {
+  background-color: #ccc;
+}
 /* .bi {
   width: 100%;
   height: 100%;
@@ -59,12 +64,15 @@ h3 {
   width: 80%;
   justify-content: space-around;
 
-  /* position: absolute; */
+  position: relative;
   border: 2px solid #000000;
   background-color: var(--blue);
-  margin: 30px;
-  padding: 30px;
+  /* margin: 30px;
+  padding: 30px; */
   box-sizing: border-box;
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.2s ease-out;
 }
 .kalender {
   /* width: 100%;
@@ -259,7 +267,6 @@ h3 {
   padding: 0;
 }
 
-
 .footer {
   display: flex;
   flex-direction: row;
@@ -298,11 +305,6 @@ h3 {
 .contactname {
   margin-bottom: 0;
 }
-
-
-
-
-
 
 .searchbtn {
   background: transparent;
@@ -351,7 +353,7 @@ h3 {
   transform: scale(1.1);
 }
 
-.searchbar input[type=text] {
+.searchbar input[type="text"] {
   padding: 15px;
   font-size: 20px;
   border: none;
@@ -362,7 +364,7 @@ h3 {
   opacity: 1;
 }
 
-.searchbar input[type=text]:hover {
+.searchbar input[type="text"]:hover {
   background: #f1f1f1;
 }
 
