--- a/index.css
+++ b/index.css
@@ -19,13 +19,14 @@ h3 {
   font-weight: var(--f-bold);
 }
 
-a {
+/*a {
   text-decoration: inherit;
   font-family: var(--font);
   font-weight: var(--f-bold);
   line-height: 28.8px;
   color: #000000;
 }
+  */
 .container {
   display: flex;
   flex-direction: column;
@@ -82,6 +83,11 @@ a {
   overflow: hidden;
   max-height: 0;
   transition: max-height 0.2s ease-out;
+  text-decoration: inherit;
+  font-family: var(--font);
+  font-weight: var(--f-bold);
+  line-height: 28.8px;
+  color: #000000;
 }
 .kalender {
   /* width: 100%;
@@ -388,4 +394,17 @@ a {
 
 .searchbar button:hover {
   background: #bbb;
+}
+
+.infolink {
+  text-decoration: none;
+  font-weight: 300;
+  color: #000000;
+}
+
+.info_container {
+  border: #000000 8px solid;
+  border-radius: 5px;
+  margin-top: 10px;
+  padding-left: 10px;
 }
