fixed a minor styling error with the links

--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ h3 {
   font-weight: var(--f-bold);
 }
 
-/*a {
+a {
   text-decoration: inherit;
   font-family: var(--font);
   font-weight: var(--f-bold);
