--- a/index.css
+++ b/index.css
@@ -82,28 +82,55 @@ h3 {
   /* margin: 30px;
   padding: 30px; */
   box-sizing: border-box;
-  overflow: hidden;
 
-  transition: max-height 0.2s ease-out;
+  transition: max-height 0.5s ease-out;
   text-decoration: inherit;
   font-family: var(--font);
   font-weight: var(--f-bold);
   line-height: 28.8px;
   color: #000000;
 }
-.kalender {
-  /* width: 100%;
-  height: 100%; */
-  color: black;
-  font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  line-height: 28.8px;
-  word-wrap: break-word;
-
-  padding: 10px;
-  /* border: 1px solid #000000; */
+.dropbtn {
+  background-color: #04aa6d;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
 .genre {
   /* width: 100%;
   height: 100%; */
