--- a/index.css
+++ b/index.css
@@ -1,486 +1,1 @@
-:root {
-  --black: #000000;
-  --white: #ffffff;
-  --font: Arial, Helvetica, sans-serif;
-  --f-bold: bold;
-  --blue: #c4d5ed;
-}
-
-h1 {
-  font-size: xx-large;
-  font-weight: var(--f-bold);
-}
-h2 {
-  font-size: x-large;
-  font-weight: var(--f-bold);
-}
-h3 {
-  font-size: medium;
-  font-weight: var(--f-bold);
-}
-
-a {
-  text-decoration: inherit;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  line-height: 28.8px;
-  color: #000000;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  justify-content: center;
-}
-
-.menu {
-  cursor: pointer;
-  display: flex;
-  max-width: 375px;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  color: black;
-  font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  line-height: 28.8px;
-  word-wrap: break-word;
-  background-color: var(--blue);
-  /* padding: 10px;
-  margin: 30px; */
-  border: 8px solid #000000;
-  border-radius: 5px;
-  box-sizing: border-box;
-  margin-top: 10px;
-}
-.active:hover {
-  background-color: #ccc;
-}
-/* .menu:hover {
-  background-color: #ccc;
-} */
-/* .bi {
-  width: 100%;
-  height: 100%;
-}
-.bi-list {
-  width: 100%;
-  height: 100%;
-} */
-
-.nav {
-  /* position: relative; */
-  /* max-height: 375px; */
-  width: 100%;
-  /* height: 100%; */
-  justify-content: space-around;
-
-  position: relative;
-  border: 2px solid #000000;
-  background-color: var(--blue);
-  /* margin: 30px;
-  padding: 30px; */
-  box-sizing: border-box;
-
-  transition: max-height 0.5s ease-out;
-  text-decoration: inherit;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  line-height: 28.8px;
-  color: #000000;
-}
-.dropbtn {
-  background-color: var(--blue);
-  color: var(--black);
-  font-weight: var(--f-bold);
-  padding: 10px;
-  font-size: 24px;
-  border: none;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown:hover .dropbtn {
-  background-color: darkgrey;
-}
-
-.genre {
-  /* width: 100%;
-  height: 100%; */
-  color: black;
-  font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  line-height: 28.8px;
-  word-wrap: break-word;
-
-  padding: 10px;
-  /* border: 1px solid #000000; */
-}
-.billeder {
-  /* width: 100%;
-  height: 100%; */
-  color: black;
-  font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  line-height: 28.8px;
-  word-wrap: break-word;
-
-  padding: 10px;
-  /* border: 1px solid #000000; */
-}
-.info {
-  /* width: 100%;
-  height: 100%; */
-  color: black;
-  font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  line-height: 28.8px;
-  word-wrap: break-word;
-
-  padding: 10px;
-  /* border: 1px solid #000000; */
-}
-.kontakt {
-  /* width: 100%;
-  height: 100%; */
-  color: black;
-  font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  /* line-height: 28.8px; */
-  /* word-wrap: break-word; */
-
-  padding: 10px;
-  /* border: 1px solid #000000; */
-}
-.sog {
-  /* width: 100%;
-  height: 100%; */
-  color: black;
-  font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  line-height: 28.8px;
-  /* word-wrap: break-word; */
-
-  padding: 10px;
-  /* border: 1px solid #000000; */
-}
-
-.menu_inside {
-  /* width: 100%;
-  height: 100%; */
-  color: black;
-  font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  /* line-height: 28.8px; */
-  /* word-wrap: break-word; */
-
-  padding: 10px;
-  /* border: 1px solid #000000; */
-}
-
-.shows {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  /* position: absolute; */
-  margin: 10px 0px 0px 0px;
-  border: 8px solid #000000;
-  border-radius: 5px;
-  box-sizing: border-box;
-  align-items: center;
-}
-.band {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  /* position: absolute; */
-  background-color: var(--blue);
-  border: 0.5px solid #000000;
-  box-sizing: border-box;
-  align-items: center;
-}
-
-.band:nth-child(odd) {
-  background: #ffffff;
-}
-
-.band:nth-child(even) {
-  background: var(--blue);
-}
-
-.subsection_top {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
-}
-.subsection_bottom {
-  width: 100%;
-}
-
-.headliner {
-  text-transform: uppercase;
-  font-weight: 900;
-  font-size: 3rem;
-  margin: 0px 0px 0px 10px;
-  width: 80%;
-}
-
-.supporting {
-  text-transform: uppercase;
-  font-weight: 900;
-  font-size: 2rem;
-  margin: 0px 0px 0px 10px;
-  width: 90%;
-}
-
-.countrycode {
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 1rem;
-}
-
-.date {
-  color: black;
-  font-size: 10px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  text-transform: uppercase;
-  margin: 10px 0px 0px 10px;
-}
-
-.sale {
-  color: black;
-  font-size: 10px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  text-transform: uppercase;
-  margin: 10px 10px 0px 0px;
-}
-
-.logo {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-}
-
-.logotext {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #c4d5ed;
-  border: #000000 8px solid;
-  border-radius: 5px;
-  box-sizing: border-box;
-  width: 100%;
-  height: 90px;
-}
-
-.logochris {
-  font-size: 24px;
-  letter-spacing: 8px;
-}
-
-.logolopp h1 {
-  font-size: 52px;
-  font-weight: 1000;
-  letter-spacing: 4px;
-  line-height: 0.7;
-  margin: 5px 0px 0px 0px;
-  padding: 0;
-}
-
-.logoimg {
-  display: flex;
-  justify-content: center;
-  width: 90px;
-  height: 90px;
-  border: #000000 8px solid;
-  border-radius: 5px;
-  margin-right: 10px;
-  background-color: #c4d5ed;
-}
-
-.bluebox {
-  width: 50%;
-  height: 90px;
-  border: #000000 8px solid;
-  border-radius: 5px;
-  margin-left: 10px;
-  background-color: #c4d5ed;
-}
-
-.logolopp h1 {
-  font-size: 52px;
-  font-weight: 1000;
-  letter-spacing: 4px;
-  line-height: 0.7;
-  margin: 5px 0px 0px 0px;
-  padding: 0;
-}
-
-.footer {
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-  justify-content: center;
-  align-items: center;
-  border-top: #000000 solid 1px;
-  padding: 10px;
-  margin-top: 10px;
-}
-
-.socialmedia i {
-  font-size: 22px;
-  margin: 0px 8px 0px 8px;
-}
-
-.footerlinks a {
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 12px;
-  margin-left: 10px;
-}
-
-.kontaktpage {
-  border: #000000 8px solid;
-  border-radius: 5px;
-  padding: 10px 0px 0px 10px;
-}
-
-.contactheading {
-  font-weight: 700;
-  margin-bottom: 0;
-  margin-top: 10px;
-}
-
-.contactname {
-  margin-bottom: 0;
-}
-
-.searchbtn {
-  background: transparent;
-  border: none;
-  font-size: 24px;
-  font-weight: var(--f-bold);
-  cursor: pointer;
-}
-
-.searchbtn:hover {
-  color: #343434;
-}
-
-.searchbar {
-  height: 100%;
-  width: 100%;
-  display: none;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #000000ef;
-}
-
-.searchbar-open {
-  position: relative;
-  top: 35%;
-  width: 80%;
-  background-color: #ffffff;
-  text-align: center;
-  margin: auto;
-}
-
-.searchbar .closebtn {
-  position: absolute;
-  top: 60px;
-  right: 80px;
-  font-size: 60px;
-  cursor: pointer;
-  color: white;
-  transition: all 0.3s ease-in-out;
-}
-
-.searchbar .closebtn:hover {
-  color: #ccc;
-  transform: scale(1.1);
-}
-
-.searchbar input[type="text"] {
-  padding: 15px;
-  font-size: 20px;
-  border: none;
-  float: left;
-  width: 60%;
-  background: white;
-  border: #000000 solid 0.4px;
-  opacity: 1;
-}
-
-.searchbar input[type="text"]:hover {
-  background: #f1f1f1;
-}
-
-.searchbar button {
-  width: 40%;
-  padding: 15px;
-  background: #ffffff;
-  font-size: 20px;
-  border: #000000 solid 0.4px;
-  cursor: pointer;
-}
-
-.searchbar button:hover {
-  background: #bbb;
-}
-
-.infolink {
-  text-decoration: none;
-  font-weight: 300;
-  color: #000000;
-}
-
-.info_container {
-  border: #000000 8px solid;
-  border-radius: 5px;
-  margin-top: 10px;
-  padding-left: 10px;
-}
+/*# sourceMappingURL=index.css.map */
