added hover over sog but no idea why not same size as other

--- a/index.css
+++ b/index.css
@@ -303,6 +303,15 @@ a {
   background-color: darkgrey;
 }
 
+.sog:hover .searchbtn {
+  background-color: darkgrey;
+}
+
+.sog {
+  position: relative;
+  display: inline-block;
+}
+
 .genre {
   /* width: 100%;
   height: 100%; */
