--- a/index.css
+++ b/index.css
@@ -675,3 +675,15 @@ a {
   font-size: xx-large;
   text-align: end;
 }
+.genre_x_btn {
+  padding: 24px;
+  cursor: pointer;
+  font-size: xx-large;
+  text-align: end;
+}
+.billeder_x_btn {
+  padding: 24px;
+  cursor: pointer;
+  font-size: xx-large;
+  text-align: end;
+}
