--- a/index.css
+++ b/index.css
@@ -301,6 +301,47 @@ a {
 .dropdown4:hover .dropbtn4 {
   background-color: darkgrey;
 }
+.dropbtn5 {
+  background-color: var(--blue);
+  color: var(--black);
+  font-weight: var(--f-bold);
+  padding: 10px;
+  font-size: 24px;
+  border: none;
+}
+
+.dropdown5 {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content5 {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content5 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content5 a:hover {
+  background-color: #ddd;
+}
+
+.dropdown5:hover .dropdown-content5 {
+  display: block;
+}
+
+.dropdown5:hover .dropbtn5 {
+  background-color: darkgrey;
+}
 
 .sog:hover .searchbtn {
   background-color: darkgrey;
@@ -682,6 +723,12 @@ a {
   text-align: end;
 }
 .billeder_x_btn {
+  padding: 24px;
+  cursor: pointer;
+  font-size: xx-large;
+  text-align: end;
+}
+.menu_x_btn {
   padding: 24px;
   cursor: pointer;
   font-size: xx-large;
