--- a/media.scss
+++ b/media.scss
@@ -1,3 +1,8 @@
+@import "footer";
+@import "header";
+@import "section";
+@import "navbar";
+@import "index";
 @media screen and (max-width: 743px) {
   body {
     margin: 10px;
@@ -8,45 +13,16 @@
   }
   .nav {
     display: flex;
-    /* flex-direction: column; */
     max-height: 0;
     overflow: hidden;
     padding-left: 160px;
     padding-right: 160px;
     margin-top: -3px;
   }
+  .bluebox {
+    display: none;
+  }
 }
-/* @media screen and (min-width: 376px) {
-  body {
-    margin: 10px;
-  }
-
-  .dropdown5 {
-    display: flex;
-  }
-  .nav {
-    display: flex;
-    flex-direction: column;
-
-    overflow: visible;
-    margin-top: 10px;
-  }
-  .menu {
-    display: none;
-  }
-  .genre {
-    display: none;
-  }
-  .billeder {
-    display: none;
-  }
-  .info {
-    display: none;
-  }
-  .kontakt {
-    display: none;
-  }
-} */
 @media screen and (min-width: 744px) {
   body {
     margin: 10px;
@@ -57,11 +33,8 @@
   .nav {
     display: flex;
     flex-direction: row;
-
     justify-content: center;
-
     margin-top: 10px;
-
     overflow: visible;
   }
   .menu {
@@ -141,11 +114,5 @@
   }
   .dropbtn4 {
     display: flex;
-  }
-}
-
-@media screen and (max-width: 744px) {
-  .bluebox {
-    display: none;
   }
 }
