--- a/index.scss
+++ b/index.scss
@@ -1,9 +1,9 @@
 /*# sourceMappingURL=index.css.map */
 @use "base";
-@import "footer";
-@import "header";
-@import "section";
-@import "navbar";
+@use "footer";
+@use "header";
+@use "section";
+@use "navbar";
 
 h1 {
   font-size: xx-large;
