--- a/_navbar.scss
+++ b/_navbar.scss
@@ -1,19 +1,18 @@
+@use "base";
 .menu {
   cursor: pointer;
   display: flex;
   justify-content: center;
   width: 100%;
   height: 100%;
-  color: black;
+  color: base.$black;
   font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
+  font-family: base.$font;
+  font-weight: base.$fbold;
   line-height: 28.8px;
   word-wrap: break-word;
-  background-color: var(--blue);
-  /* padding: 10px;
-  margin: 30px; */
-  border: 8px solid #000000;
+  background-color: base.$blue;
+  border: 8px solid base.$black;
   border-radius: 5px;
   box-sizing: border-box;
   margin-top: 10px;
@@ -53,7 +52,7 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: base.$dropcolor;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -94,7 +93,7 @@
 .dropdown-content1 {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: base.$dropcolor;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -258,7 +257,7 @@
 .dropdown-content5 {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: base.$dropcolor;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
