--- a/index.css
+++ b/index.css
@@ -9,13 +9,11 @@ footer {
   padding: 10px;
   margin-top: 10px;
 }
-
-.socialmedia i {
+footer .socialmedia i {
   font-size: 22px;
   margin: 0px 8px 0px 8px;
 }
-
-.footerlinks a {
+footer .footerlinks a {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 12px;
@@ -256,16 +254,14 @@ footer {
   justify-content: center;
   width: 100%;
   height: 100%;
-  color: black;
+  color: #000;
   font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
+  font-family: Arial Helvetica sans-serif;
+  font-weight: bold;
   line-height: 28.8px;
   word-wrap: break-word;
-  background-color: var(--blue);
-  /* padding: 10px;
-  margin: 30px; */
-  border: 8px solid #000000;
+  background-color: #c4d5ed;
+  border: 8px solid #000;
   border-radius: 5px;
   box-sizing: border-box;
   margin-top: 10px;
