adding last semantic html Section

--- a/_footer.scss
+++ b/_footer.scss
@@ -5,7 +5,7 @@ footer {
   gap: 40px;
   justify-content: center;
   align-items: center;
-  border-top: #000000 solid 1px;
+  border-top: base.$black solid 1px;
   padding: 10px;
   margin-top: 10px;
 
