--- a/_section.scss
+++ b/_section.scss
@@ -1,4 +1,5 @@
 @use "base";
+
 .shows {
   display: flex;
   flex-direction: column;
@@ -12,75 +13,77 @@
   box-sizing: border-box;
   align-items: center;
 }
-.band {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  font-family: "Arial Black", Gadget, sans-serif;
-  font-weight: var(--f-bold);
-  /* position: absolute; */
-  background-color: var(--blue);
-  border: 0.5px solid #000000;
-  box-sizing: border-box;
-  align-items: center;
-}
+section {
+  .band {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    font-family: "Arial Black", Gadget, sans-serif;
+    font-weight: var(--f-bold);
+    /* position: absolute; */
+    background-color: var(--blue);
+    border: 0.5px solid #000000;
+    box-sizing: border-box;
+    align-items: center;
+  }
 
-.band:nth-child(odd) {
-  background: #ffffff;
-}
+  .band:nth-child(odd) {
+    background: #ffffff;
+  }
 
-.band:nth-child(even) {
-  background: var(--blue);
-}
+  .band:nth-child(even) {
+    background: var(--blue);
+  }
 
-.subsection_top {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
-.subsection_bottom {
-  width: 100%;
-}
+  .subsection_top {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+  .subsection_bottom {
+    width: 100%;
+  }
 
-.headliner {
-  text-transform: uppercase;
-  font-weight: 900;
-  font-size: 2rem;
-  margin: 0px 0px 0px 10px;
-  width: 80%;
-}
+  .headliner {
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 2rem;
+    margin: 0px 0px 0px 10px;
+    width: 80%;
+  }
 
-.supporting {
-  text-transform: uppercase;
-  font-weight: 900;
-  font-size: 1.8rem;
-  margin: 0px 0px 0px 10px;
-  width: 90%;
-}
+  .supporting {
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 1.8rem;
+    margin: 0px 0px 0px 10px;
+    width: 90%;
+  }
 
-.countrycode {
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 0.8rem;
-  margin: 0;
-}
+  .countrycode {
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 0.8rem;
+    margin: 0;
+  }
 
-.date {
-  color: black;
-  font-size: 0.7rem;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  text-transform: uppercase;
-  margin: 10px 0px 0px 10px;
-}
+  .date {
+    color: black;
+    font-size: 0.7rem;
+    font-family: var(--font);
+    font-weight: var(--f-bold);
+    text-transform: uppercase;
+    margin: 10px 0px 0px 10px;
+  }
 
-.sale {
-  color: black;
-  font-size: 0.6em;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  text-transform: uppercase;
-  margin: 10px 10px 0px 0px;
+  .sale {
+    color: black;
+    font-size: 0.6em;
+    font-family: var(--font);
+    font-weight: var(--f-bold);
+    text-transform: uppercase;
+    margin: 10px 10px 0px 0px;
+  }
 }
