--- a/_base.scss
+++ b/_base.scss
@@ -1,6 +1,6 @@
 $black: #000;
 $white: #fff;
-$font: Arial Helvetica sans-serif;
+$font: "Arial Black", Gadget, sans-serif;
 $fbold: bold;
 $blue: #c4d5ed;
 $dropcolor: #f1f1f1;
