--- a/_navbar.scss
+++ b/_navbar.scss
@@ -1,374 +1,377 @@
 @use "base";
-.menu {
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  color: base.$black;
-  font-size: 24px;
-  font-family: base.$font;
-  font-weight: base.$fbold;
-  line-height: 28.8px;
-  word-wrap: break-word;
-  background-color: base.$blue;
-  border: 8px solid base.$black;
-  border-radius: 5px;
-  box-sizing: border-box;
-  margin-top: 10px;
-}
-.active:hover {
-  background-color: #ccc;
-}
 
-.nav {
-  width: 100%;
-  justify-content: space-around;
-  position: relative;
-  border: 2px solid #000000;
-  background-color: var(--blue);
-  box-sizing: border-box;
-  transition: max-height 0.5s ease-out;
-  text-decoration: inherit;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  line-height: 28.8px;
-  color: #000000;
-}
-.dropbtn {
-  background-color: var(--blue);
-  color: var(--black);
-  font-weight: var(--f-bold);
-  padding: 10px;
-  font-size: 24px;
-  border: none;
-}
+nav {
+  .menu {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    color: base.$black;
+    font-size: 24px;
+    font-family: base.$font;
+    font-weight: base.$fbold;
+    line-height: 28.8px;
+    word-wrap: break-word;
+    background-color: base.$blue;
+    border: 8px solid base.$black;
+    border-radius: 5px;
+    box-sizing: border-box;
+    margin-top: 10px;
+  }
+  .active:hover {
+    background-color: #ccc;
+  }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
+  .nav {
+    width: 100%;
+    justify-content: space-around;
+    position: relative;
+    border: 2px solid #000000;
+    background-color: var(--blue);
+    box-sizing: border-box;
+    transition: max-height 0.5s ease-out;
+    text-decoration: inherit;
+    font-family: var(--font);
+    font-weight: var(--f-bold);
+    line-height: 28.8px;
+    color: #000000;
+  }
+  .dropbtn {
+    background-color: var(--blue);
+    color: var(--black);
+    font-weight: var(--f-bold);
+    padding: 10px;
+    font-size: 24px;
+    border: none;
+  }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: base.$dropcolor;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: base.$dropcolor;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
 
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
 
-.dropdown:hover .dropdown-content {
-  display: block;
-}
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
 
-.dropdown:hover .dropbtn {
-  background-color: darkgrey;
-}
-.dropbtn1 {
-  background-color: var(--blue);
-  color: var(--black);
-  font-weight: var(--f-bold);
-  padding: 10px;
-  font-size: 24px;
-  border: none;
-}
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 
-.dropdown1 {
-  position: relative;
-  display: inline-block;
-}
+  .dropdown:hover .dropbtn {
+    background-color: darkgrey;
+  }
+  .dropbtn1 {
+    background-color: var(--blue);
+    color: var(--black);
+    font-weight: var(--f-bold);
+    padding: 10px;
+    font-size: 24px;
+    border: none;
+  }
 
-.dropdown-content1 {
-  display: none;
-  position: absolute;
-  background-color: base.$dropcolor;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
+  .dropdown1 {
+    position: relative;
+    display: inline-block;
+  }
 
-.dropdown-content1 a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
+  .dropdown-content1 {
+    display: none;
+    position: absolute;
+    background-color: base.$dropcolor;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
 
-.dropdown-content1 a:hover {
-  background-color: #ddd;
-}
+  .dropdown-content1 a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
 
-.dropdown1:hover .dropdown-content1 {
-  display: block;
-}
+  .dropdown-content1 a:hover {
+    background-color: #ddd;
+  }
 
-.dropdown1:hover .dropbtn1 {
-  background-color: darkgrey;
-}
-.dropbtn2 {
-  background-color: var(--blue);
-  color: var(--black);
-  font-weight: var(--f-bold);
-  padding: 10px;
-  font-size: 24px;
-  border: none;
-}
+  .dropdown1:hover .dropdown-content1 {
+    display: block;
+  }
 
-.dropdown2 {
-  position: relative;
-  display: inline-block;
-}
+  .dropdown1:hover .dropbtn1 {
+    background-color: darkgrey;
+  }
+  .dropbtn2 {
+    background-color: var(--blue);
+    color: var(--black);
+    font-weight: var(--f-bold);
+    padding: 10px;
+    font-size: 24px;
+    border: none;
+  }
 
-.dropdown-content2 {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
+  .dropdown2 {
+    position: relative;
+    display: inline-block;
+  }
 
-.dropdown-content2 a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
+  .dropdown-content2 {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
 
-.dropdown-content2 a:hover {
-  background-color: #ddd;
-}
+  .dropdown-content2 a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
 
-.dropdown2:hover .dropdown-content2 {
-  display: block;
-}
+  .dropdown-content2 a:hover {
+    background-color: #ddd;
+  }
 
-.dropdown2:hover .dropbtn2 {
-  background-color: darkgrey;
-}
-.dropbtn3 {
-  background-color: var(--blue);
-  color: var(--black);
-  font-weight: var(--f-bold);
-  padding: 10px;
-  font-size: 24px;
-  border: none;
-}
+  .dropdown2:hover .dropdown-content2 {
+    display: block;
+  }
 
-.dropdown3 {
-  position: relative;
-  display: inline-block;
-}
+  .dropdown2:hover .dropbtn2 {
+    background-color: darkgrey;
+  }
+  .dropbtn3 {
+    background-color: var(--blue);
+    color: var(--black);
+    font-weight: var(--f-bold);
+    padding: 10px;
+    font-size: 24px;
+    border: none;
+  }
 
-.dropdown-content3 {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
+  .dropdown3 {
+    position: relative;
+    display: inline-block;
+  }
 
-.dropdown-content3 a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
+  .dropdown-content3 {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
 
-.dropdown-content3 a:hover {
-  background-color: #ddd;
-}
+  .dropdown-content3 a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
 
-.dropdown3:hover .dropdown-content3 {
-  display: block;
-}
+  .dropdown-content3 a:hover {
+    background-color: #ddd;
+  }
 
-.dropdown3:hover .dropbtn3 {
-  background-color: darkgrey;
-}
-.dropbtn4 {
-  background-color: var(--blue);
-  color: var(--black);
-  font-weight: var(--f-bold);
-  padding: 10px;
-  font-size: 24px;
-  border: none;
-}
+  .dropdown3:hover .dropdown-content3 {
+    display: block;
+  }
 
-.dropdown4 {
-  position: relative;
-  display: inline-block;
-}
+  .dropdown3:hover .dropbtn3 {
+    background-color: darkgrey;
+  }
+  .dropbtn4 {
+    background-color: var(--blue);
+    color: var(--black);
+    font-weight: var(--f-bold);
+    padding: 10px;
+    font-size: 24px;
+    border: none;
+  }
 
-.dropdown-content4 {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
+  .dropdown4 {
+    position: relative;
+    display: inline-block;
+  }
 
-.dropdown-content4 a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
+  .dropdown-content4 {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
 
-.dropdown-content4 a:hover {
-  background-color: #ddd;
-}
+  .dropdown-content4 a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
 
-.dropdown4:hover .dropdown-content4 {
-  display: block;
-}
+  .dropdown-content4 a:hover {
+    background-color: #ddd;
+  }
 
-.dropdown4:hover .dropbtn4 {
-  background-color: darkgrey;
-}
-.dropbtn5 {
-  background-color: var(--blue);
-  color: var(--black);
-  font-weight: var(--f-bold);
-  padding: 10px;
-  font-size: 24px;
-  border: none;
-}
+  .dropdown4:hover .dropdown-content4 {
+    display: block;
+  }
 
-.dropdown5 {
-  position: relative;
-  display: inline-block;
-}
+  .dropdown4:hover .dropbtn4 {
+    background-color: darkgrey;
+  }
+  .dropbtn5 {
+    background-color: var(--blue);
+    color: var(--black);
+    font-weight: var(--f-bold);
+    padding: 10px;
+    font-size: 24px;
+    border: none;
+  }
 
-.dropdown-content5 {
-  display: none;
-  position: absolute;
-  background-color: base.$dropcolor;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
+  .dropdown5 {
+    position: relative;
+    display: inline-block;
+  }
 
-.dropdown-content5 a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
+  .dropdown-content5 {
+    display: none;
+    position: absolute;
+    background-color: base.$dropcolor;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
 
-.dropdown-content5 a:hover {
-  background-color: #ddd;
-}
+  .dropdown-content5 a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
 
-.dropdown5:hover .dropdown-content5 {
-  display: block;
-}
+  .dropdown-content5 a:hover {
+    background-color: #ddd;
+  }
 
-.dropdown5:hover .dropbtn5 {
-  background-color: darkgrey;
-}
+  .dropdown5:hover .dropdown-content5 {
+    display: block;
+  }
 
-.genre {
-  /* width: 100%;
+  .dropdown5:hover .dropbtn5 {
+    background-color: darkgrey;
+  }
+
+  .genre {
+    /* width: 100%;
   height: 100%; */
-  color: black;
-  font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  line-height: 28.8px;
-  word-wrap: break-word;
+    color: black;
+    font-size: 24px;
+    font-family: var(--font);
+    font-weight: var(--f-bold);
+    line-height: 28.8px;
+    word-wrap: break-word;
 
-  padding: 10px;
-  /* border: 1px solid #000000; */
-}
-.billeder {
-  /* width: 100%;
+    padding: 10px;
+    /* border: 1px solid #000000; */
+  }
+  .billeder {
+    /* width: 100%;
   height: 100%; */
-  color: black;
-  font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  line-height: 28.8px;
-  word-wrap: break-word;
-  padding: 10px;
-}
-.info {
-  color: black;
-  font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  line-height: 28.8px;
-  word-wrap: break-word;
-  padding: 10px;
-}
-.kontakt {
-  color: black;
-  font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  padding: 10px;
-}
-.sog {
-  color: black;
-  font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  line-height: 28.8px;
-  padding: 10px;
-}
+    color: black;
+    font-size: 24px;
+    font-family: var(--font);
+    font-weight: var(--f-bold);
+    line-height: 28.8px;
+    word-wrap: break-word;
+    padding: 10px;
+  }
+  .info {
+    color: black;
+    font-size: 24px;
+    font-family: var(--font);
+    font-weight: var(--f-bold);
+    line-height: 28.8px;
+    word-wrap: break-word;
+    padding: 10px;
+  }
+  .kontakt {
+    color: black;
+    font-size: 24px;
+    font-family: var(--font);
+    font-weight: var(--f-bold);
+    padding: 10px;
+  }
+  .sog {
+    color: black;
+    font-size: 24px;
+    font-family: var(--font);
+    font-weight: var(--f-bold);
+    line-height: 28.8px;
+    padding: 10px;
+  }
 
-.menu_inside {
-  color: black;
-  font-size: 24px;
-  font-family: var(--font);
-  font-weight: var(--f-bold);
-  padding: 10px;
-}
+  .menu_inside {
+    color: black;
+    font-size: 24px;
+    font-family: var(--font);
+    font-weight: var(--f-bold);
+    padding: 10px;
+  }
 
-.sog:hover .searchbtn {
-  background-color: darkgrey;
-}
+  .sog:hover .searchbtn {
+    background-color: darkgrey;
+  }
 
-.sog {
-  position: relative;
-  display: inline-block;
-}
+  .sog {
+    position: relative;
+    display: inline-block;
+  }
 
-.kalendar_x_btn {
-  padding: 24px;
-  cursor: pointer;
-  font-size: xx-large;
-  text-align: end;
-}
-.genre_x_btn {
-  padding: 24px;
-  cursor: pointer;
-  font-size: xx-large;
-  text-align: end;
-}
-.billeder_x_btn {
-  padding: 24px;
-  cursor: pointer;
-  font-size: xx-large;
-  text-align: end;
-}
-.menu_x_btn {
-  padding: 24px;
-  cursor: pointer;
-  font-size: xx-large;
-  text-align: end;
+  .kalendar_x_btn {
+    padding: 24px;
+    cursor: pointer;
+    font-size: xx-large;
+    text-align: end;
+  }
+  .genre_x_btn {
+    padding: 24px;
+    cursor: pointer;
+    font-size: xx-large;
+    text-align: end;
+  }
+  .billeder_x_btn {
+    padding: 24px;
+    cursor: pointer;
+    font-size: xx-large;
+    text-align: end;
+  }
+  .menu_x_btn {
+    padding: 24px;
+    cursor: pointer;
+    font-size: xx-large;
+    text-align: end;
+  }
 }
